--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Définition des polices personnalisées */
+/* Définition des polices personnalisées ///////////////////////////////////////////////////////////*/
 
 @font-face
 {
@@ -6,29 +6,78 @@
     src: url('fonts/raleway-variablefont_wght-webfont.woff2') format('woff2'),
          url('fonts/raleway-variablefont_wght-webfont.woff') format('woff');
     src: url('fonts/raleway-variablefont_wght-webfont.ttf') format('truetype');       
-    font-weight: normal;
+    font-weight: 500;
     font-style: normal;
 
 }
 
-/* Eléments principaux de la page */
+*
+{
+	margin: 0;
+}
+
+/* Eléments principaux de la page ///////////////////////////////////////////////////////////////////*/
 
 body
 {
 	font-family: Raleway, Arial, sans-serif;
 	color: #181818;
-	margin: 0;
+
+}
+
+h1
+{
+	font-size: 1.3em;
+	font-weight: 900;
 
 }
 
 
 
 
+/* Header ////////////////////////////////////////////////////////////////////////////////////////*/
+
+header
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+   
+}
 
 
 
 
-/* Footer */
+/* Navigation ///////////////////////////////////////////////////////////////////////////////////*/
+
+nav ul
+{
+    list-style-type: none;
+    display: flex;
+    padding-bottom: 10%;
+}
+
+nav li
+{
+    margin-right: 50px;
+}
+
+nav a
+{
+    font-size: 1em;
+    color: black;
+    padding-bottom: 3px;
+    text-decoration: none;
+}
+
+nav a:hover
+{
+    color: #0065FC;
+    border-top: 2px solid #0065FC;
+}
+
+
+/* Footer /////////////////////////////////////////////////////////////////////////////// */
 
 footer
 {
@@ -36,6 +85,7 @@ footer
     justify-content: flex-start;
     background-color: #F2F2F2;
     padding-top: 25px;
+    padding-left: 0;
 }
 
 #a_propos
