--- a/style.css
+++ b/style.css
@@ -76,6 +76,30 @@ nav a:hover
     border-top: 2px solid #0065FC;
 }
 
+/* Corps /////////////////////////////////////////////////////////////////////////////////*/
+
+.stars 
+{
+    display: inline-flex;
+    font-size: 1em;
+}
+
+
+.fa-star 
+{
+    color: gray;
+}
+
+.fa-star.gold 
+{
+    color: #0065FC;
+}
+
+
+
+
+
+
 
 /* Footer /////////////////////////////////////////////////////////////////////////////// */
 
