--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ body
 {
 	font-family: Raleway, Arial, sans-serif;
 	color: #181818;
+    width: 100%;
+    margin: auto;
 
 }
 
@@ -37,11 +39,6 @@ p
     font-size: 0.9em;
 }
 
-#bloc_page
-{
-    width: 1340px;
-    margin: auto;
-}
 
 
 
@@ -59,13 +56,13 @@ header
 
 
 
+
 /* Navigation ///////////////////////////////////////////////////////////////////////////////////*/
 
 nav ul
 {
     list-style-type: none;
     display: flex;
-    padding-bottom: 10%;
 }
 
 nav li
@@ -87,12 +84,78 @@ nav a:hover
     border-top: 2px solid #0065FC;
 }
 
+#style_inscrire
+{
+    font-weight: bold;
+    color: #0065FC;
+}
+
+
 /* Corps /////////////////////////////////////////////////////////////////////////////////*/
+
+#section2
+{
+    display: flex;
+}
+
+section article
+{
+    background-color: #F2F2F2;
+    border-radius: 20px;
+    width: 70%;
+    margin: auto;
+
+}
+
+section aside
+{
+    background-color: #F2F2F2;
+    border-radius: 20px;
+    width: 30%;
+    margin: auto;
+}
+
+#hebergements_block
+{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+
+}
+
+
+.hebergements
+{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    margin: auto;
+
+}
+
+
+#populaires_block
+{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+
+.populaires
+{
+    display: flex;
+    flex-direction: column;
+}
+
+
 
 .stars 
 {
     display: inline-flex;
     font-size: 1em;
+    list-style-type: none;
 }
 
 
@@ -105,9 +168,6 @@ nav a:hover
 {
     color: #0065FC;
 }
-
-
-
 
 
 
@@ -142,3 +202,20 @@ footer
 {
 	
 }
+
+/*EXEMPLE chemin CSS
+section form.formulaire input.button[type="button"]{
+
+}
+
+ul#hebergements_block{
+
+}
+
+#hebergements_block li {
+
+}
+
+#hebergements_block li a {
+
+}*/
