--- a/style.css
+++ b/style.css
@@ -23,14 +23,15 @@ body
 	font-family: Raleway, Arial, sans-serif;
 	color: #181818;
     width: 100%;
-    
+    padding: 0;
+    margin: 0;
 }
+    
 
 h1
 {
 	font-size: 1.3em;
 	font-weight: 900;
-
 }
 
 h2
@@ -45,7 +46,7 @@ h3
 
 p
 {
-    font-size: 0.8em;
+    font-size: 0.9em;
 }
 
 
@@ -59,11 +60,14 @@ header
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-   
+    padding: 0px 0px 0 50px; 
 }
 
-
-
+body header img
+{
+    padding-top: 40px;
+    padding-bottom: 20px;
+}
 
 
 /* Navigation ///////////////////////////////////////////////////////////////////////////////////*/
@@ -72,25 +76,28 @@ nav ul
 {
     list-style-type: none;
     display: flex;
+    margin-right: 20px;
+    margin-bottom: 41px;
 }
 
 nav li
-{
-    margin-right: 50px;
+{   
+    
 }
 
 nav a
 {
     font-size: 1em;
     color: black;
-    padding-bottom: 1px;
+    padding: 0px 30px 0 30px;
     text-decoration: none;
 }
 
 nav a:hover
 {
     color: #0065FC;
-    border-top: 2px solid #0065FC;
+    border-top: 3px solid #0065FC;
+    padding-top: 42px;
 }
 
 #style_inscrire
@@ -102,6 +109,59 @@ nav a:hover
 
 /* Corps /////////////////////////////////////////////////////////////////////////////////*/
 
+
+/* Corps ////// SECTION 1 ////////////////////////////////////////////////////////////////*/
+
+#section1
+{
+    padding: 0 50px 0 50px;
+}
+
+section#section1 p
+{
+    margin-top: -10px;
+    margin-bottom: 20px;
+    
+}
+
+.formulaire
+{
+     margin-bottom: 25px;
+
+}
+
+.fa-map-marker-alt
+{
+    background-color: #F2F2F2;
+    border-radius: 15px 0px 0px 15px;
+    padding: 16px 18px 16px 18px;
+
+}
+
+.champ
+{
+    font-family: Raleway, Arial, sans-serif;
+    font-size: 1em;
+    font-weight: bold;
+    border: 2px solid #F2F2F2;
+    padding: 13px 15px 13px 15px;
+}
+
+.bouton
+{
+    font-family: Raleway, Arial, sans-serif;
+    font-size: 1em;
+    color: white;
+    background-color: #0065FC;
+    border-radius: 0px 15px 15px 0;
+    border: 0;
+    padding: 15px 15px 15px 15px;
+
+}
+
+
+
+
 #filtres
 {
     display: flex;
@@ -109,44 +169,80 @@ nav a:hover
     align-items: center;
     list-style-type: none;
     width: 70%;
+    padding-left: 0px;
+}
+
+
+#filtres li a
+{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    border: 3px solid #F2F2F2;
+    border-radius: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+
+.filtres_text
+{
+    padding-right: 20px;
+    padding-left: 15px;
+    
+
 }
 
 .icons_filtres
 {
-    size: 3px;
+
     color: #0065FC;
     background-color: #DEEBFF;
-    padding: 10px;
+    padding: 12px;
+
     border-radius: 50px;
 }
 
+.fa-money-bill-wave
+{
+    
+
+}
+
+#information
+{
+    padding: 30px 0 10px 0;
+}
+
+.fa-info
+{
+    font-size: 10px;
+    color: #0065FC;
+    padding: 4px 7px 4px 8px;
+    border: 2px solid #F2F2F2;
+    border-radius: 50px;
+    margin: 0 10px 0px 0;
+}
 
 
+/* Corps ////// SECTION 2 ////////////////////////////////////////////////////////////////*/
 
 #section2
 {
     display: flex;
-    justify-content: space-around;
-
+    justify-content: space-between;
+    padding: 0 50px 0 50px;
 }
+
 
 section article
 {
     background-color: #F2F2F2;
     border-radius: 20px;
-    width: 70%;
-    
+    width: 60%;
+    padding: 20px 40px 0px 40px;   
 
 }
-
-section aside
-{
-    background-color: #F2F2F2;
-    border-radius: 20px;
-    width: 25%;
-    
-}
-
 
 section article ul li a
 {
@@ -156,10 +252,68 @@ section article ul li a
 
 section article ul li a img
 {
-
-   max-height: 200px;
+   width: 100%;
+   max-height: 120px;
    border-radius: 20px 20px 0 0;
+   margin: 0;
+   padding: 0;
 
+}
+
+#section2 article a
+{
+    text-decoration: none;
+    color: black;
+}
+
+li.hebergements h3,p,ul.stars
+{
+    margin: 5px 0 0 35px;
+}
+
+
+
+#hebergements_block
+{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0;
+ 
+
+}
+
+
+.hebergements
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 30%;
+    background-color: white;
+    border: 4px solid white;
+    border-radius: 20px;
+    box-shadow: 0px 1px 10px silver;
+    margin: auto;
+    overflow: hidden;
+    padding: 0px;
+    margin: 0 0px 30px 0;
+    box-shadow: 0px 1px 10px silver;
+}
+
+
+
+
+
+section aside
+{
+    background-color: #F2F2F2;
+    border-radius: 20px;
+    width: 30%;
+    padding: 20px 0px 0px 0px;
+
+    
 }
 
 section aside ul li a
@@ -175,60 +329,61 @@ section aside ul li a img
 }
 
 
-#hebergements_block
-{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-
-}
-
-
-.hebergements
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 30%;
-    background-color: white;
-    border-radius: 20px;
-    margin: auto;
-
-}
-
-
-
-
 #populaires_block
 {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-direction: column;
+    padding: 0;
 }
 
 
 .populaires
 {
     display: flex;
-    flex-direction: column;
+    background-color: white;
+    border-radius: 20px;
+    margin: auto;
+    box-shadow: 0px 1px 10px silver;
+    padding: 0;
+    margin: 0 40px 20px 40px;
+
 }
 
+
+
+/* Corps ////// SECTION 3 ////////////////////////////////////////////////////////////////*/
+
+
+
+#section3
+{
+    
+    padding: 50px 50px 50px 50px;
+
+}
 
 #activites_block
 {
     display: flex;
     justify-content: space-between;
     list-style-type: none;
-    width: 100%;
-    margin: auto;
-
+    margin: 0;
+    padding: 0;
 }
 
 .activites
 {
     width: 23%;
-    margin: auto;
+    max-height: 450px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 1px 10px silver;
+}
+
+section#section3 figure
+{
+    margin: 0;
 }
 
 section ul li figure a
@@ -237,12 +392,27 @@ section ul li figure a
     color: black;
 }
 
+section ul li figure img
+{
+    height: 400px;
+}
+
+section ul li figure figcaption
+{
+    font-weight: bold;
+    padding: 12px 0 0 20px;
+}
+
+
+
 
 .stars 
 {
     display: inline-flex;
     font-size: 1em;
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -261,34 +431,59 @@ section ul li figure a
 
 /* Footer /////////////////////////////////////////////////////////////////////////////// */
 
+
 footer
 {
-    display: flex;
-    justify-content: flex-start;
     background-color: #F2F2F2;
-    padding-top: 25px;
+    padding: 15px 50px 30px 50px; 
+}
+
+#footer_block
+{
+    display: flex;
     padding-left: 0;
+
 }
 
 #a_propos
 {
-    width: 28%;
+    width: 33%;
+    list-style-type: none;
+    padding-left: 0;
 }
 
 #nos_hebergements
 {
-    width: 28%;
+    width: 33%;
+    list-style-type: none;
+    padding-left: 0;
 }
 
 #assistance
 {
-   width: 28%;
+   width: 33%;
+   list-style-type: none;
+   padding-left: 0;
 }
 
-#footers_liens
+.footers_liens
 {
-	
+	list-style-type: none;
+    padding-left: 0;
+    padding-top: 5px;
 }
+
+.footers_liens li 
+{
+    padding-bottom: 10px;
+}
+
+.footers_liens li a
+{
+    text-decoration: none;
+    color: black;
+}
+
 
 /*EXEMPLE chemin CSS
 section form.formulaire input.button[type="button"]{
