--- a/style.css
+++ b/style.css
@@ -136,7 +136,8 @@ section#section1 p
 {
     background-color: #F2F2F2;
     border-radius: 15px 0px 0px 15px;
-    padding: 16px 18px 16px 18px;
+    padding: 15px 13px 15px 15px;
+    border: 2px solid #F2F2F2;
 }
 
 .champ
@@ -146,6 +147,8 @@ section#section1 p
     font-weight: bold;
     border: 2px solid #F2F2F2;
     padding: 13px 15px 13px 15px;
+    position: relative;
+    left: -4px;
 }
 
 .bouton
@@ -155,8 +158,10 @@ section#section1 p
     color: white;
     background-color: #0065FC;
     border-radius: 0px 15px 15px 0;
-    border: 0;
-    padding: 15px 15px 15px 15px;
+    border: 1px solid #0065FC;
+    padding: 14px 15px 14px 15px;
+    position: relative;
+    left: -8px;
 }
 
 
@@ -233,30 +238,30 @@ section#section1 p
 }
 
 
-section article
+section#section2 article
 {
     background-color: #F2F2F2;
     border-radius: 20px;
-    width: 60%;
+    width: 63%;
     padding: 20px 40px 0px 40px;   
 }
 
-section article ul li a
+section#section2 article ul li a
 {
     text-decoration: none;
     color: black;
 }
 
-section article ul li a img
+section#section2 article ul li a img
 {
    width: 100%;
    max-height: 120px;
-   border-radius: 20px 20px 0 0;
+   border-radius: 15px 15px 0 0;
    margin: 0;
    padding: 0;
 }
 
-#section2 article a
+section#section2 article a
 {
     text-decoration: none;
     color: black;
@@ -300,24 +305,48 @@ li.hebergements h3,p,ul.stars
 
 
 
-section aside
+section#section2 aside
 {
     background-color: #F2F2F2;
     border-radius: 20px;
-    width: 30%;
+    width: 28%;
     padding: 20px 0px 0px 0px;
 }
 
-section aside ul li a
+section#section2 aside ul li a 
 {
     text-decoration: none;
     color: black;
 }
 
-section aside ul li a img
+section#section2 aside ul li figure
 {
-    width: 200px;
-   height: 100px;
+    width: 110px;
+    height: ;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+section#section2 aside ul li figure img
+{
+   max-height: 200px;
+   border-radius: 15px 0px 0 15px;
+}
+
+section#section2 aside h1
+{
+    padding: 0 0 0 35px;
+}
+
+li.populaires a h3,p,ul.stars
+{
+    margin: 10px 10px 0 20px;
+}
+
+li.populaires ul.stars
+{
+    padding: 20px 0 0 0;
 }
 
 
@@ -335,10 +364,12 @@ section aside ul li a img
     display: flex;
     background-color: white;
     border-radius: 20px;
-    margin: auto;
+    border: 4px solid white;
     box-shadow: 0px 1px 10px silver;
     padding: 0;
-    margin: 0 40px 20px 40px;
+    margin: 0 40px 30px 40px;
+    height: 130px;
+    overflow: hidden;
 }
 
 
@@ -375,18 +406,18 @@ section#section3 figure
     margin: 0;
 }
 
-section ul li figure a
+section#section3 ul li figure a
 {
     text-decoration: none;
     color: black;
 }
 
-section ul li figure img
+section#section3 ul li figure img
 {
     height: 400px;
 }
 
-section ul li figure figcaption
+section#section3 ul li figure figcaption
 {
     font-weight: bold;
     padding: 12px 0 0 20px;
