--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ section#section2 article
 {
     background-color: #F2F2F2;
     border-radius: 20px;
-    width: 63%;
+    width: 60%;
     padding: 20px 40px 0px 40px;   
 }
 
@@ -265,6 +265,8 @@ section#section2 article a
 {
     text-decoration: none;
     color: black;
+    
+
 }
 
 li.hebergements h3,p,ul.stars
@@ -280,6 +282,7 @@ li.hebergements h3,p,ul.stars
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 0;
+    margin: 0 0 -10px 0;
 }
 
 
@@ -294,7 +297,6 @@ li.hebergements h3,p,ul.stars
     border: 4px solid white;
     border-radius: 20px;
     box-shadow: 0px 1px 10px silver;
-    margin: auto;
     overflow: hidden;
     padding: 0 0 5px 0;
     margin: 0 0px 30px 0;
@@ -309,7 +311,7 @@ section#section2 aside
 {
     background-color: #F2F2F2;
     border-radius: 20px;
-    width: 28%;
+    width: 31%;
     padding: 20px 0px 0px 0px;
 }
 
@@ -321,7 +323,7 @@ section#section2 aside ul li a
 
 section#section2 aside ul li figure
 {
-    width: 110px;
+    width: 130px;
     height: ;
     margin: 0;
     padding: 0;
@@ -341,12 +343,12 @@ section#section2 aside h1
 
 li.populaires a h3,p,ul.stars
 {
-    margin: 10px 10px 0 20px;
+    margin: 10px 30px 0 20px;
 }
 
 li.populaires ul.stars
 {
-    padding: 20px 0 0 0;
+    padding: 30px 0 0 0;
 }
 
 
@@ -368,7 +370,7 @@ li.populaires ul.stars
     box-shadow: 0px 1px 10px silver;
     padding: 0;
     margin: 0 40px 30px 40px;
-    height: 130px;
+    height: 140px;
     overflow: hidden;
 }
 
@@ -437,7 +439,7 @@ section#section3 ul li figure figcaption
 
 .fa-star 
 {
-    color: gray;
+    color: #F2F2F2;
     font-size: 0.8em;
 }
 
