--- a/style.css
+++ b/style.css
@@ -189,6 +189,11 @@ section#section1 p
     padding-bottom: 10px;
 }
 
+#filtres li a:hover
+{
+   border: 3px solid #0065FC;
+}
+
 
 .filtres_text
 {
@@ -403,6 +408,50 @@ li.populaires ul.stars
     box-shadow: 0px 1px 10px silver;
 }
 
+.activites figure img
+{
+    height: 400px;
+}
+
+.activites figure figcaption
+{
+    font-weight: bold;
+    padding: 12px 0 12px 20px;
+}
+
+.activites2
+{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    width: 23%;
+    max-height: 450px;
+    
+}
+
+.activites2 figure
+{
+    height: 45%;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 1px 10px silver;
+}
+
+.activites2 figure img
+{
+    max-height: 150px;
+    position: relative;
+}
+
+.activites2 figure figcaption
+{
+    font-weight: bold;
+    padding: 12px 0 12px 20px;
+    background-color: white;
+    position: absolute;
+    top: ;
+}
+
 section#section3 figure
 {
     margin: 0;
@@ -412,17 +461,6 @@ section#section3 ul li figure a
 {
     text-decoration: none;
     color: black;
-}
-
-section#section3 ul li figure img
-{
-    height: 400px;
-}
-
-section#section3 ul li figure figcaption
-{
-    font-weight: bold;
-    padding: 12px 0 0 20px;
 }
 
 
