--- a/style.css
+++ b/style.css
@@ -305,7 +305,6 @@ li.hebergements h3,p,ul.stars
     overflow: hidden;
     padding: 0 0 5px 0;
     margin: 0 0px 30px 0;
-    box-shadow: 0px 1px 10px silver;
 }
 
 
@@ -387,7 +386,7 @@ li.populaires ul.stars
 
 #section3
 { 
-    padding: 50px 50px 50px 50px;
+    padding: 50px 50px 70px 50px;
 }
 
 #activites_block
@@ -396,13 +395,13 @@ li.populaires ul.stars
     justify-content: space-between;
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 10px 0 0 0;
+    max-height: 500px;
 }
 
 .activites
 {
     width: 23%;
-    max-height: 450px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 1px 10px silver;
@@ -410,7 +409,7 @@ li.populaires ul.stars
 
 .activites figure img
 {
-    height: 400px;
+    height: 450px;
 }
 
 .activites figure figcaption
@@ -422,34 +421,37 @@ li.populaires ul.stars
 .activites2
 {
     display: flex;
-    justify-content: space-between;
     flex-direction: column;
+    justify-content: space-between;
     width: 23%;
-    max-height: 450px;
     
 }
 
 .activites2 figure
 {
+    min-height: ;
     height: 45%;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 1px 10px silver;
+    position: relative;
 }
 
 .activites2 figure img
 {
-    max-height: 150px;
-    position: relative;
+    width: 100%;
+    
 }
 
 .activites2 figure figcaption
 {
+    width: 100%;
     font-weight: bold;
-    padding: 12px 0 12px 20px;
+    padding: 15px 0 15px 20px;
     background-color: white;
     position: absolute;
-    top: ;
+    bottom: 0px;
+    
 }
 
 section#section3 figure
