--- a/style.css
+++ b/style.css
@@ -174,7 +174,8 @@ section#section1 p
     align-items: center;
     list-style-type: none;
     width: 70%;
-    padding-left: 0px;
+    margin: 0px 0 0px 0;
+    padding: 5px 0 5px 0;
 }
 
 
@@ -184,38 +185,46 @@ section#section1 p
     color: black;
     font-weight: bold;
     border: 3px solid #F2F2F2;
-    border-radius: 50px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    border-radius: 100px;
+    padding: 10px 0 10px 0;
+    margin: 0;
+
 }
 
 #filtres li a:hover
 {
-   border: 3px solid #0065FC;
+   background-color: #0065FC;
+   color: white;
+
 }
 
 
 .filtres_text
 {
     padding-right: 20px;
-    padding-left: 15px;
+    padding-left: 10px;
+}
+
+#filtres li a i
+{
+    width: 22px;
+    height: 22px;
+    font-size: 1em;
 }
 
 .icons_filtres
 {
-
+    margin: 0px;
+    text-align: center;
+    border-radius: 100px;
     color: #0065FC;
-    background-color: #DEEBFF;
-    padding: 12px;
-
-    border-radius: 50px;
-}
-
-.fa-money-bill-wave
-{
+    background: #DEEBFF;
+    padding: 13px 13px 13px 13px;
     
-
+    position: relative;
+    left: -4px;
 }
+
 
 #information
 {
