--- a/style.css
+++ b/style.css
@@ -567,3 +567,9 @@ footer
     text-decoration: none;
     color: black;
 }
+
+
+
+/*Media queries*/
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
