--- a/style.css
+++ b/style.css
@@ -572,4 +572,99 @@ footer
 
 /*Media queries*/
 
+@media (max-width: 575.98px)
+{
 
+
+    header
+    {
+        width: auto;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0;
+    }
+
+
+
+    body header img
+    {
+        padding: 35px 0 40px 20px;
+    }
+
+    
+
+    nav ul
+    {
+        width: auto;
+        padding: 0;
+        justify-content: space-between;
+        
+    }
+
+    nav a
+    {
+        padding-bottom: 20px;
+        border-bottom: 5px solid #F2F2F2; 
+
+    }
+
+    nav a:hover
+    {
+        color: #0065FC;
+        border-top: 0px;
+        padding-top: 0px;
+        border-bottom: 5px solid #0065FC;
+        padding-bottom: 20px;
+    }
+
+    #section1
+    {
+        width: auto;
+        padding: 0px 20px 0px 20px;
+    }
+
+    #filtres
+    {
+        width: auto;
+        flex-wrap: wrap;
+    }
+
+    #section2
+    {
+        flex-direction: column;
+        align-items: center;
+        width: auto;
+        padding: 0;
+    }
+
+    section#section2 article
+    {
+        width: auto;
+        padding: 0 20px 0 20px;
+        background-color: white;
+        border-radius: 0px;
+    }
+
+    #hebergements_block
+    {
+        flex-direction: column;
+        width: auto;
+
+
+    }
+
+    .hebergements
+    {
+        width: auto;
+       
+    }
+    
+    
+
+    section#section2 aside
+    {
+        width: auto;
+        border-radius: 0px;
+    }
+
+}
