--- a/style.css
+++ b/style.css
@@ -661,6 +661,8 @@ footer
         padding: 0;
     }
 
+    
+
     section#section2 article
     {
         width: auto;
@@ -680,7 +682,6 @@ footer
     .hebergements
     {
         width: auto;
-       
     }
     
 /*////////////////////////////////////////////*/
@@ -690,6 +691,22 @@ footer
     {
         width: auto;
         border-radius: 0px;
+        padding: 0 20px 0 20px;
+        
+    }
+
+    #populaires_block
+    {
+       
+        justify-content: space-between;
+        
+    }
+
+    .populaires
+    {
+        width: auto;
+        margin: 0 0 30px 0;
+        
     }
 
 
