--- a/style.css
+++ b/style.css
@@ -352,24 +352,18 @@ section#section2 aside
     padding: 20px 0px 0px 0px;
 }
 
-section#section2 aside ul li a 
-{
-    text-decoration: none;
-    color: black;
-}
 
 section#section2 aside ul li figure
 {
-    width: 130px;
-    height: ;
+    width: 60%;
     margin: 0;
     padding: 0;
     overflow: hidden;
 }
 
 section#section2 aside ul li figure img
-{
-   max-height: 200px;
+{ 
+   max-height: 150%;
    border-radius: 15px 0px 0 15px;
 }
 
@@ -378,16 +372,6 @@ section#section2 aside h1
     display: flex;
     justify-content: space-between;
     padding: 0 35px 0 35px;
-}
-
-li.populaires a h3,p,ul.stars
-{
-    margin: 10px 30px 0 20px;
-}
-
-li.populaires ul.stars
-{
-    padding: 30px 0 0 0;
 }
 
 #populaires_block
@@ -411,6 +395,28 @@ li.populaires ul.stars
     overflow: hidden;
 }
 
+.populaires_block_text
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-decoration: none;
+    color: black;
+    margin: 0px 10px 5px 20px;
+    width: 300px;
+}
+
+.populaires_text
+{
+    margin: 5px 10px 0 0;
+}
+
+li.populaires a div h3,p
+{
+    margin: 10px 0px 0 0px;
+}
+
+
 
 
 /* Corps ////// SECTION 3 - ACTIVITES ////////////////////////////////////////////////////////*/
@@ -424,58 +430,82 @@ li.populaires ul.stars
 
 #activites_block
 {
-    display: flex;
-    justify-content: space-between;
+   
     list-style-type: none;
-    margin: 0;
+    margin: auto;
     padding: 10px 0 0 0;
-    max-height: 500px;
+    height: 450px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 40px;
+
 }
 
-.activites
+#activites_block figure
 {
-    width: 23%;
+    position: relative;
+    max-height: 450px;
+    height: ;
+    width: ;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 1px 10px silver;
+    margin: 0;
+    padding: 0;
+}
+
+#activites_block figure:first-child
+{
+    grid-column: 1;
+    grid-row: 1 / 3;
+}
+
+#activites_block figure:nth-child(2)
+{
+    grid-column: 2;
+    grid-row: 1;
+}
+
+#activites_block figure:nth-child(3)
+{
+    grid-column: 2;
+    grid-row: 2;
+}
+
+#activites_block figure:nth-child(4)
+{
+    grid-column: 3;
+    grid-row: 1 / 3;
+
+}    
+
+#activites_block figure:nth-child(5)
+{
+    grid-column: 4;
+    grid-row: 1;
+}
+
+#activites_block figure:nth-child(6)
+{
+    grid-column: 4;
+    grid-row: 2;
 }
 
 
-.activites figure img
+#activites_block figure a
 {
-    height: 450px;
+    text-decoration: none;
+    color: black;
 }
 
-.activites figure figcaption
-{
-    font-weight: bold;
-    padding: 12px 0 12px 20px;
-}
 
-.activites2
+#activites_block figure img
 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 23%;
     
 }
 
-.activites2 figure
-{
-    height: 45%;
-    border-radius: 20px;
-    overflow: hidden;
-    box-shadow: 0px 1px 10px silver;
-    position: relative;
-}
-
-.activites2 figure img
-{
-    width: 100%;
-}
-
-.activites2 figure figcaption
+#activites_block figure figcaption
 {
     width: 100%;
     font-weight: bold;
@@ -483,18 +513,6 @@ li.populaires ul.stars
     background-color: white;
     position: absolute;
     bottom: 0px;
-    
-}
-
-section#section3 figure
-{
-    margin: 0;
-}
-
-section#section3 ul li figure a
-{
-    text-decoration: none;
-    color: black;
 }
 
 
@@ -706,7 +724,7 @@ footer
     section#section2 article
     {
         width: auto;
-        padding: 0 20px 0 20px;
+        padding: 15px 20px 0 20px;
         background-color: white;
         border-radius: 0px;
     }
@@ -719,6 +737,7 @@ footer
     .hebergements
     {
         width: auto;
+        margin: 0 0 15px 0;
     }
     
 /*////////////////////////////////////////////*/
@@ -726,24 +745,25 @@ footer
 
     section#section2 aside
     {
-        width: auto;
+        width: 100%;
         border-radius: 0px;
-        padding: 0 20px 0 20px;
-        
     }
 
     section#section2 aside h1
-{
-    padding: 0  0px 0 0px;
-}
+    {
+        padding: 0  20px 0 20px;
+    }
+
+    #populaires_block
+    {
+        width: auto;
+        margin: 0 20px 20px 20px;
+    }
 
     .populaires
     {
-        width: auto;
-        margin: 0 0 30px 0;
-        
+        margin: 0 0 15px 0;    
     }
-
 
 
 /*////////////////////////////////////////////*/
@@ -751,40 +771,28 @@ footer
     #section3
     {
         width: auto;
-        padding: 30px 20px 30px 20px;
+        padding: 20px 20px 50px 20px;
 
     }
 
     #activites_block
     {
-        
+        width: auto;
+        height: auto;
+        display: flex;
         flex-direction: column;
-        max-height: 3000px;
+        grid-gap: 25px;
     }
 
-    .activites
+    #activites_block figure
     {
-        width: auto;
-        margin: 0 0 30px 0; 
+        position: relative;
+        height: 190px;
     }
 
-    .activites figure
+    #activites_block figure img
     {
-        height: 200px;
-    }
-
-    .activites2
-    {
-        width: auto;
-        margin: 0 0 30px 0;
-        padding: 0;
-    }
-
-    .activites2 figure
-    {
-        height: 200px;
-        margin: 0 0 30px 0;
-
+        width: 100%;
     }
 
   
