--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body
 {
 	font-family: Raleway, Arial, sans-serif;
 	color: #181818;
-    width: 100%;
+    width: ;
     padding: 0;
     margin: 0;
 }
@@ -604,6 +604,10 @@ footer
 
 @media (max-width: 575.98px)
 {
+    body
+    {
+        width: auto;
+    }
 
 
 
