--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body
 {
 	font-family: Raleway, Arial, sans-serif;
 	color: #181818;
-    width: ;
+    width: 100%;
     padding: 0;
     margin: 0;
 }
@@ -604,10 +604,6 @@ footer
 
 @media (max-width: 575.98px)
 {
-    body
-    {
-        width: auto;
-    }
 
 
 
