--- a/style.css
+++ b/style.css
@@ -27,18 +27,18 @@ body
 }
     
 
-h1
+h1,h2
 {
 	font-size: 1.3em;
 	font-weight: 900;
 }
 
-h2
+h3
 {
     font-size: 1.1em;
 }
 
-h3
+h4
 {
     font-size: 1em;
 }
@@ -190,7 +190,7 @@ section#section1 p
     display: flex;
 }
 
-#filtres li h2
+#filtres li h3
 {
     padding: 0 0px 0 0;
 }
@@ -295,7 +295,7 @@ section#section2 article ul li a
     color: black;
 }
 
-li.hebergements a h3
+li.hebergements a h4
 {
     margin: 10px 30px 0 20px;
 }
@@ -370,7 +370,7 @@ section#section2 aside ul li figure img
    border-radius: 15px 0px 0 15px;
 }
 
-section#section2 aside h1
+section#section2 aside h2
 {
     display: flex;
     justify-content: space-between;
@@ -414,7 +414,7 @@ section#section2 aside h1
     margin: 5px 10px 0 0;
 }
 
-li.populaires a div h3,p
+li.populaires a div h4,p
 {
     margin: 10px 0px 0 0px;
 }
@@ -503,14 +503,14 @@ li.populaires a div h3,p
     max-height: 120%;
 }
 
-#activites_block figure h3
+#activites_block figure h4
 {
     width: 100%;
     font-weight: bold;
     padding: 15px 0 15px 20px;
     background-color: white;
     position: absolute;
-    bottom: -16px;
+    bottom: -22px;
 }
 
 
@@ -618,7 +618,7 @@ footer
         padding: 35px 0 0px 20px;
     }
 
-    h1
+    h1,h2
     {
         font-size: 1.4em;
     }
@@ -742,7 +742,7 @@ footer
        margin: 0 0px 10px 0;
     }
 
-    #filtres li h2
+    #filtres li h3
     {
         padding: 0 250px 0 0;
     }
@@ -789,7 +789,7 @@ footer
         border-radius: 0px;
     }
 
-    section#section2 aside h1
+    section#section2 aside h2
     {
         padding: 0  20px 0 20px;
     }
@@ -950,7 +950,7 @@ footer
         margin: 0 0 30px 0;
     }
 
-    section#section2 aside h1
+    section#section2 aside h2
     { 
         padding: 0 10px 0 10px;
     }
@@ -971,7 +971,7 @@ footer
         margin: 5px 5px 0 0;
     }
 
-    li.populaires a div h3,p
+    li.populaires a div h4,p
     {
         margin: 5px 0px 0 0px;
     }
