--- a/style.css
+++ b/style.css
@@ -263,6 +263,10 @@ section#section1 p
     padding: 0 50px 0 50px;
 }
 
+section#section2 > h2
+{
+    display: none;
+}
 
 /* Corps ////// SECTION 2 //////HEBERGEMENTS///////////////////////////////////////////////*/
 
