--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ section#section1 p
     left: -8px;
 }
 
-.bouton_min
+.bouton > i
 {
     display: none;
 }
@@ -715,11 +715,6 @@ footer
 
     .bouton
     {
-        display: none;
-    }
-
-    .bouton_min
-    {
         display: block;
         font-size: 1em;
         color: white;
@@ -730,6 +725,16 @@ footer
         position: relative;
         left: -10px;
         width: auto;
+    }
+
+    .bouton > i
+    {
+        display: block;
+    }
+
+    #rechercher
+    {
+        display: none;
     }
 
 
