--- a/style.css
+++ b/style.css
@@ -268,6 +268,13 @@ section#section2 > h2
     display: none;
 }
 
+section#section2 p > span
+
+{
+    font-weight: bold;
+}
+
+
 /* Corps ////// SECTION 2 //////HEBERGEMENTS///////////////////////////////////////////////*/
 
 
@@ -301,6 +308,7 @@ section#section2 article ul li a
 
 li.hebergements a figcaption
 {
+    font-weight: bold;
     margin: 10px 30px 0 20px;
 }
 
@@ -507,14 +515,14 @@ li.populaires a div h4,p
     max-height: 120%;
 }
 
-#activites_block figure h4
+#activites_block figure figcaption
 {
     width: 100%;
     font-weight: bold;
     padding: 15px 0 15px 20px;
     background-color: white;
     position: absolute;
-    bottom: -22px;
+    bottom: 0px;
 }
 
 
