--- a/style.css
+++ b/style.css
@@ -455,7 +455,7 @@ li.populaires a div h4,p
     grid-gap: 40px;
 }
 
-#activites_block figure
+#activites_block a
 {
     position: relative;
     max-height: 450px;
@@ -464,65 +464,74 @@ li.populaires a div h4,p
     box-shadow: 0px 1px 10px silver;
     margin: 0;
     padding: 0;
+    
 }
 
-#activites_block figure:first-child
+
+
+#activites_block a:first-child
 {
     grid-column: 1;
     grid-row: 1 / 3;
 }
 
-#activites_block figure:nth-child(2)
+#activites_block a:nth-child(2)
 {
     grid-column: 2;
     grid-row: 1;
 }
 
-#activites_block figure:nth-child(3)
+#activites_block a:nth-child(3)
 {
     grid-column: 2;
     grid-row: 2;
 }
 
-#activites_block figure:nth-child(4)
+#activites_block a:nth-child(4)
 {
     grid-column: 3;
     grid-row: 1 / 3;
 }    
 
-#activites_block figure:nth-child(5)
+#activites_block a:nth-child(5)
 {
     grid-column: 4;
     grid-row: 1;
 }
 
-#activites_block figure:nth-child(6)
+#activites_block a:nth-child(6)
 {
     grid-column: 4;
     grid-row: 2;
 }
 
-
-#activites_block figure a
+#activites_block a figure
 {
-    text-decoration: none;
-    color: black;
+    margin: 0;
+    padding: 0;
 }
 
-
-#activites_block figure img
+.image_portrait
 {
-    max-height: 120%;
+    height: 100%;
 }
 
-#activites_block figure figcaption
+.image_paysage
+{
+    width: 100%;
+}
+
+#activites_block a figure figcaption
 {
     width: 100%;
     font-weight: bold;
     padding: 15px 0 15px 20px;
     background-color: white;
+    text-decoration: none;
+    color: black;
     position: absolute;
     bottom: 0px;
+
 }
 
 
@@ -836,15 +845,13 @@ footer
         grid-gap: 25px;
     }
 
-    #activites_block figure
+    #activites_block a
     {
-        position: relative;
         height: 190px;
     }
 
     #activites_block figure img
     {
-        max-height: none;
         width: 100%;
     }
 
@@ -1009,16 +1016,14 @@ footer
         flex-wrap: wrap;
     }
 
-    #activites_block figure
+    #activites_block a
     {
-        
         height: 190px;
         width: 46%;
     }
 
     #activites_block figure img
     {
-        max-height: none;
         width: 100%;
     }
 }
